--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <tr>
     <td>  <img src="gift moyo.jfif" alt="Gift Profile picture"></td>
     <td>   <h1>Gift Moyo</h1>
-      <p><em>Founder and CEO of <strong>Smart Technology</strong></em></p>
+     <!.. <p><em>Founder and CEO of <strong>Smart Technology</strong></em></p>...>
       <p> I am a web developer I love coding and brain storming </p>
       <ul></td>
   </tr>
