--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gift's personal site</title>
+   <script src="cv.js"></script> 
 </head>
 <table cellspacing="50px">
   <tr>
