--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Gift's personal site</title>
-   <script src="cv.js"></script> 
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
+
 <table cellspacing="50px">
   <tr>
     <td>  <img src="gift moyo.jfif" alt="Gift Profile picture"></td>
