--- a/index.html
+++ b/index.html
@@ -83,17 +83,16 @@
     </tr>
   </table>
   <hr size="3" color="purp">
-  <ul>
-    <li>
-      <a href="my hobbies.html">MY HOBBIES</a>
-    </li>
-    <li>
-      <a href="contact.html">CONTACTS</a>
-    </li>
-  </ul>
-
-
-
+  
+  
+//navigation
+  
+<ul>
+  <li><a class="nav-link" href="#about-section">About</a></li>
+  <li><a class="nav-link" href="#portfolio-section">Portfolio</a></li>
+  <li><a class="nav-link" href="contact.html">Contact</a></li>
+  <i><a  class="nav-link" href="my hobbies.html">MY HOBBIES</a></li>
+</ul>
 
 </body>
 
