--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <hr size="3" color="purp">
   
   
-//navigation
+<!-- navigation -->
   
 <ul>
   <li><a class="nav-link" href="#about-section">About</a></li>
