--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
 <ul>
   <li><a class="nav-link" href="#about-section">About</a></li>
-  <li><a class="nav-link" href="#portfolio-section">Portfolio</a></li>
+  <li><a class="nav-link" href="projects.html">Portfolio</a></li>
   <li><a class="nav-link" href="contact.html">Contact</a></li>
   <i><a  class="nav-link" href="my hobbies.html">MY HOBBIES</a></li>
 </ul>
