edited file path

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a class="nav-link" href="cv\projects\3D folded list.html">3D Folded List</a></li>
+        <li><a class="nav-link" href="projects/3D folded list.html">3D Folded List</a></li>
     </ul>
 </body>
 </html>
