--- a/projects/3D folded list.html
+++ b/projects/3D folded list.html
@@ -1,10 +1,9 @@
-                                                
-                                                <!-- this script is provided by www.htmlfreecode.com coded by: Kerixa Inc. -->
+
 <style>
 /* VARIABLES */
 /* BASE STYLES */
  body {
-     color: #1f4e5f;
+     color: #021922;
      font: 400 100%/1.4 "Lato", sans-serif;
      background-image: radial-gradient(#1f4e5f 10%, #79a8a9 100%);
      background-size: 2000px 2000px;
@@ -102,18 +101,18 @@
 	<ul class="list">
 	
 		<li class="list__item">
-			<span class="list__item-text">HtmlFreeCode</span>
+			<span class="list__item-text">Freecode camp</span>
 		</li>
 		<li class="list__item">
-			<span class="list__item-text">HtmlFreeCode</span>
+			<span class="list__item-text">Odini projects</span>
 		</li>
 		<li class="list__item">
-			<span class="list__item-text">HtmlFreeCode</span>
+			<span class="list__item-text">W3Schools</span>
 		</li>
 		<li class="list__item">
-			<span class="list__item-text">HtmlFreeCode</span>
+			<span class="list__item-text">OSSU</span>
 		</li>
 	</ul>
 </section>
-<a target='_blank' href='www.htmlfreecode.com' style='font-size: 8pt; text-decoration: none'>Html Free Codes</a>                                                
+<a target='_blank' href='https://moyo2.github.io/CV/projects' style='font-size: 8pt; text-decoration: none'>Portfolio</a>                                                
                                             
