--- a/projects/3D folded list.html
+++ b/projects/3D folded list.html
@@ -3,9 +3,9 @@
 /* VARIABLES */
 /* BASE STYLES */
  body {
-     color: #021922;
+     color: #081e27;
      font: 400 100%/1.4 "Lato", sans-serif;
-     background-image: radial-gradient(#1f4e5f 10%, #79a8a9 100%);
+     background-image: radial-gradient(#01151d 10%, #455353 100%);
      background-size: 2000px 2000px;
      background-position: center;
 }
