--- a/index.html
+++ b/index.html
@@ -5,93 +5,108 @@
   <meta charset="utf-8">
   <title>Gift's personal site</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js"></script>
+  <style>
+    body {
+      background-color: #f0f0f0; /* Light grey background */
+      font-family: Arial, sans-serif; /* Modern font */
+    }
+    table {
+      margin: 0 auto; /* Centering the table */
+    }
+    td {
+      padding: 10px; /* Adding some space around content */
+    }
+    h1, h3 {
+      color: #333; /* Dark grey headings */
+    }
+    li {
+      margin-bottom: 10px; /* Spacing between list items */
+    }
+    a {
+      color: #007bff; /* Blue links */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline; /* Underline on hover */
+    }
+  </style>
 </head>
 
-<table cellspacing="50px">
+<body>
+
+<table cellspacing="20px">
   <tr>
-    <td>  <img src="gift moyo.jfif" alt="Gift Profile picture"></td>
+    <td>  <img src="gift_moyo.jfif" alt="Gift Profile picture" style="border-radius: 50%; width: 200px;"></td>
     <td>   <h1>Gift Moyo</h1>
-      <p> I am a web developer I love coding and brain storming </p>
-      <ul></td>
+      <p>Hi there! I'm Gift, a passionate web developer who loves coding and brainstorming innovative solutions.</p>
+    </td>
   </tr>
 </table>
 
- <body style="background-color:powderblue;">
-  <p style="font-size:48px">
-  <hr size="3" color="red">
-  <h3>Education Background</h3>
-    <li>Zambia Institute of Chartered Accounted <a href="https://www.zica.co.zm/">zica</a> <strong>Advanced Diploma in Accounting</strong></li>
-    <li>National Institute of Public Administration <a href="https://www.nipa.ac.zm/index.php">nipa</a> <strong>Diploma in business Administration</strong></li>
-    <li>Digital Passport Foundation <a href="https://www.digitalskillsfoundation.org/">digitalskillsfoundation</a> <strong>Professional digital passport Certificate </strong></li>
-    <li>Kamwala secordary school <a href="https://en.wikipedia.org/wiki/Kamwala_Secondary_School">Kamwala_Secondary_School</a> <strong>School Certificate</strong></li>
-    <li>Chisamba basic school <strong>Grade nine Certificate</strong></li>
-    <li>Kalangwa primary School <strong>Grade Seven Certificate</strong></li>
-  </ul><br>
-  <hr size="3"color="red">
-  <h3>WORK EXPERCIENCE</h3>
-  <table border="2px">
-    <thead>
-      <tr>
-        <th>DATE</th>
-        <th>WORK</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
+<hr size="3" color="#dc3545"> <!-- Red separator -->
 
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-    <tr>
-      <td>2021-present</td>
-      <td>Human resource specialist </td>
-    </tr>
-    <tr>
-      <td>2017-2020</td>
-      <td>web developer</td>
-    </tr>
-  </table><br>
-
-<hr size="3" color="red">
-
-  <table>
-    <thead>
-
-    <th>
-    SKILLS</th>
-    </thead>
-    <tr>
-      <td>Teaching</td>
-      <td> <p>&#11088; &#11088; &#11088; &#11088; &#11088;</p>
-    </tr>
-    <tr>
-      <td>Typing</td><br>
-      <td>    <p>&#11088; &#11088; &#11088; &#11088; &#9734; </p> </td>
-    </tr>
-
-    <tr>
-      <td>Excel</td>
-      <td>    <p>&#11088; &#11088; &#11088; &#11088; &#11088;</p> </td>
-    </tr>
-
-    <tr>
-   <td>research</td>
-      <td><p>&#11088; &#11088; &#11088;  &#9734; &#9734;</p></td>
-    </tr>
-  </table>
-  <hr size="3" color="purp">
-  
-  
-<!-- navigation -->
-  
+<h3>Education Background</h3>
 <ul>
-  <li><a class="nav-link" href="#about-section">About</a></li>
-  <li><a class="nav-link" href="projects.html">Portfolio</a></li>
-  <li><a class="nav-link" href="contact.html">Contact</a></li>
-  <i><a  class="nav-link" href="my hobbies.html">MY HOBBIES</a></li>
+  <li>Zambia Institute of Chartered Accountants - <a href="https://www.zica.co.zm/">ZICA</a> (Advanced Diploma in Accounting)</li>
+  <li>National Institute of Public Administration - <a href="https://www.nipa.ac.zm/index.php">NIPA</a> (Diploma in Business Administration)</li>
+  <li>Digital Passport Foundation - <a href="https://www.digitalskillsfoundation.org/">Digital Skills Foundation</a> (Professional Digital Passport Certificate)</li>
+  <li>Kamwala Secondary School - <a href="https://en.wikipedia.org/wiki/Kamwala_Secondary_School">Kamwala Secondary School</a> (School Certificate)</li>
+  <li>Chisamba Basic School (Grade Nine Certificate)</li>
+  <li>Kalangwa Primary School (Grade Seven Certificate)</li>
+</ul>
+
+<hr size="3" color="#dc3545"> <!-- Red separator -->
+
+<h3>Work Experience</h3>
+<table border="1">
+  <thead>
+    <tr>
+      <th>DATE</th>
+      <th>POSITION</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2021 - Present</td>
+      <td>Human Resource Specialist</td>
+    </tr>
+    <tr>
+      <td>2017 - 2020</td>
+      <td>Web Developer</td>
+    </tr>
+  </tbody>
+</table>
+
+<hr size="3" color="#dc3545"> <!-- Red separator -->
+
+<h3>Skills</h3>
+<table>
+  <tr>
+    <td>Teaching</td>
+    <td>★★★★☆</td>
+  </tr>
+  <tr>
+    <td>Typing</td>
+    <td>★★★★☆</td>
+  </tr>
+  <tr>
+    <td>Excel</td>
+    <td>★★★★☆</td>
+  </tr>
+  <tr>
+    <td>Research</td>
+    <td>★★★☆☆</td>
+  </tr>
+</table>
+
+<hr size="3" color="#dc3545"> <!-- Red separator -->
+
+<!-- Navigation -->
+<ul>
+  <li><a href="#about-section">About</a></li>
+  <li><a href="projects.html">Portfolio</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="my_hobbies.html">My Hobbies</a></li>
 </ul>
 
 </body>
